Implementovana video recenzija za filmove (ne moze se otvoriti na stranici zbog autorskih prava na firefoxu)

--- a/Cinestvar/Views/Film/Index.cshtml
+++ b/Cinestvar/Views/Film/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model IEnumerable<Cinestvar.Models.Film>
+﻿@model IEnumerable<Cinestvar.Models.Film>
 
 @{
     ViewData["Title"] = "Index";
@@ -12,14 +11,6 @@
     <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
-    <thead>
-        <tr>
-             <th>
-                @Html.DisplayNameFor(model => model.PosterLink)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
     <tbody>
 
 @foreach (var item in Model) {
