--- a/Cinestvar/Views/Film/Details.cshtml
+++ b/Cinestvar/Views/Film/Details.cshtml
@@ -1,60 +1,74 @@
 ﻿@model Cinestvar.Models.Film
 
+
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h3>Detalji o filmu</h3>
 
 <div>
-    <h4>Film</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NazivFilma)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NazivFilma)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PosterLink)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PosterLink)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Trajanje)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Trajanje)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Zanr)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Zanr)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Opis)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Opis)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RecenzijaLink)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RecenzijaLink)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CijenaKarte)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CijenaKarte)
-        </dd>
-    </dl>
+    <h1>@Html.DisplayFor(model => model.NazivFilma)</h1>
+    <table class = "table">
+        <tr>
+            <td>
+                <img src="@Html.DisplayFor(model => model.PosterLink)" alt="No picture avaliable"/>
+            </td>
+            <td>
+                     <dl class = "row">
+                            <dt class = "col-sm-10">
+                                @Html.DisplayNameFor(model => model.Trajanje)
+                            </dt>
+                            <dd class = "col-sm-10">
+                                 @Html.DisplayFor(model => model.Trajanje)
+                            </dd>
+                            <dt class = "col-sm-10">
+                                @Html.DisplayNameFor(model => model.Zanr)
+                            </dt>
+                            <dd class = "col-sm-10">
+                                @Html.DisplayFor(model => model.Zanr)
+                            </dd>
+                            <dt class = "col-sm-10">
+                                @Html.DisplayNameFor(model => model.Opis)
+                            </dt>
+                            <dd class = "col-sm-10">
+                               @Html.DisplayFor(model => model.Opis)
+                            </dd>
+                            <dt class = "col-sm-10">
+                                @Html.DisplayNameFor(model => model.CijenaKarte)
+                            </dt>
+                            <dd class = "col-sm-10">
+                                @Html.DisplayFor(model => model.CijenaKarte)
+                            </dd>
+             </dl>
+            </td>
+        </tr>
+    </table>
 </div>
+
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.IdFilma">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+     <h4>Termini:</h4>
+    <table border = "2" cellpadding = "10">
+        <tr>
+            <td>
+                sjadjkdsa
+            </td>
+            <td>
+                jdsjdaka
+            </td>
+        </tr>
+    </table>
+</div>
+<br />
+<br />
+    <div>
+        <iframe style="width: 100%" height="400"
+
+    src="@Html.DisplayFor(model =>model.RecenzijaLink)?autoplay=0&mute=0">
+    </iframe>
+    </div>
+
+
+<div>
+    <a asp-action="Index">Nazad na ponudu</a>
 </div>
