--- a/Cinestvar/Views/Film/Edit.cshtml
+++ b/Cinestvar/Views/Film/Edit.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Zanr" class="control-label"></label>
-                <select asp-for="Zanr" class="form-control"></select>
+                <select asp-for="Zanr" class="form-control" asp-items="Html.GetEnumSelectList<Zanr>()"></select>
                 <span asp-validation-for="Zanr" class="text-danger"></span>
             </div>
             <div class="form-group">
