--- a/Cinestvar/Views/Film/Details.cshtml
+++ b/Cinestvar/Views/Film/Details.cshtml
@@ -1,44 +1,44 @@
-﻿@model Cinestvar.Models.Film
+﻿@model IEnumerable<Cinestvar.Models.Termin>
 
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h3>Detalji o filmu</h3>
+@*<h3>Detalji o filmu</h3>*@
 
 <div>
-    <h1>@Html.DisplayFor(model => model.NazivFilma)</h1>
+    <h1>@Html.DisplayFor(modelItem => modelItem.First(t => t.IdFilma!=null).Film.NazivFilma)</h1>
     <table class = "table">
         <tr>
             <td>
-                <img src="@Html.DisplayFor(model => model.PosterLink)" alt="No picture avaliable"/>
+                <img src="@Html.DisplayFor(modelItem => modelItem.First(t => t.IdFilma!=null).Film.PosterLink)" alt="No picture avaliable"/>
             </td>
             <td>
                      <dl class = "row">
                             <dt class = "col-sm-10">
-                                @Html.DisplayNameFor(model => model.Trajanje)
+                                @Html.DisplayNameFor(model => model.Film.Trajanje)
                             </dt>
                             <dd class = "col-sm-10">
-                                 @Html.DisplayFor(model => model.Trajanje)
+                                 @Html.DisplayFor(modelItem => modelItem.First(t => t.IdFilma!=null).Film.Trajanje)
                             </dd>
                             <dt class = "col-sm-10">
-                                @Html.DisplayNameFor(model => model.Zanr)
+                                @Html.DisplayNameFor(model => model.Film.Zanr)
                             </dt>
                             <dd class = "col-sm-10">
-                                @Html.DisplayFor(model => model.Zanr)
+                                @Html.DisplayFor(modelItem => modelItem.First(t => t.IdFilma!=null).Film.Zanr)
                             </dd>
                             <dt class = "col-sm-10">
-                                @Html.DisplayNameFor(model => model.Opis)
+                                @Html.DisplayNameFor(model => model.Film.Opis)
                             </dt>
                             <dd class = "col-sm-10">
-                               @Html.DisplayFor(model => model.Opis)
+                               @Html.DisplayFor(modelItem => modelItem.First(t => t.IdFilma!=null).Film.Opis)
                             </dd>
                             <dt class = "col-sm-10">
-                                @Html.DisplayNameFor(model => model.CijenaKarte)
+                                @Html.DisplayNameFor(model => model.Film.CijenaKarte)
                             </dt>
                             <dd class = "col-sm-10">
-                                @Html.DisplayFor(model => model.CijenaKarte)
+                                @Html.DisplayFor(modelItem => modelItem.First(t => t.IdFilma!=null).Film.CijenaKarte)
                             </dd>
              </dl>
             </td>
@@ -50,12 +50,20 @@
      <h4>Termini:</h4>
     <table border = "2" cellpadding = "10">
         <tr>
+        @foreach (var item in Model)
+        {
             <td>
-                sjadjkdsa
+                <center>
+                    @* iz nekog razloga ne moze da pristupi item.Sala atributu,
+                        iako u indexu za termin nema problema s tim *@
+                     Sala 
+                     @Html.DisplayFor(modelItem => item.IdSale)
+                        <br>
+                     @Html.DisplayFor(modelItem => item.PocetakTermina)
+                </center>
+               
             </td>
-            <td>
-                jdsjdaka
-            </td>
+        }
         </tr>
     </table>
 </div>
@@ -64,7 +72,7 @@
     <div>
         <iframe style="width: 100%" height="400"
 
-    src="@Html.DisplayFor(model =>model.RecenzijaLink)?autoplay=0&mute=0">
+    src="@Html.DisplayFor(modelItem => modelItem.First(t => t.IdFilma!=null).Film.RecenzijaLink)?autoplay=0&mute=0">
     </iframe>
     </div>
 
