--- a/Cinestvar/Views/Shared/_Layout.cshtml
+++ b/Cinestvar/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Film" asp-action="Index">Filmovi</a>
                         </li>
+                           <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Stavka" asp-action="Index">Stavke</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
