sredjeni privacy i homepage

--- a/Cinestvar/Views/Home/Index.cshtml
+++ b/Cinestvar/Views/Home/Index.cshtml
@@ -3,6 +3,27 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <br />
+    <hr />
+    <h1 class="display-4" >Dobrodošli u Cinestvar!</h1>
+    
+    <hr />
+    <br />
 </div>
+
+<center>
+        <div class="col-md-6" >
+        
+        <h3 style="text-align: justify; text-justify: inter-word; font-weight:normal">
+            Na raspolaganju Vam je pregled
+        <a asp-controller="Stavka" asp-action="Index" style="color: darkgray">hrane i pića</a>, kao i 
+        <a asp-controller="Stavka" asp-action="SpecijalnePonude" style="color: darkgray">posebnih popusta</a>. 
+        Također, možete pogledati našu <a asp-controller="Film" asp-action="Index" style="color: darkgray">filmsku ponudu</a>
+        za danas. Ukoliko ste naš korisnik, možete izvršiti i rezervaciju karti ili čitave sale za neku od projekcija u ponudi. 
+        Ukoliko niste, postanite naš član već danas, registracija je besplatna!  
+        </h3>
+        
+    </div>
+</center>
+
+
