--- a/Cinestvar/Views/Home/Privacy.cshtml
+++ b/Cinestvar/Views/Home/Privacy.cshtml
@@ -1,6 +1,17 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
+@*
 <h1>@ViewData["Title"]</h1>
+*@
+<br /><br /><br /><br />
+<center>
+       <hr />
+      <h2 style="color: darkgoldenrod">Molimo Vas da ne narušavate našu privatnost.</h2>
+       <hr />    
+        <h5 style="color: darkgray" >Pita Naida    |    Šahat Faruk    |    Terzić Dženana </h5>
 
-<p>Use this page to detail your site's privacy policy.</p>
+</center>
+ 
+
+
