Commit za Nav bar Termini

--- a/Cinestvar/Views/Film/Details.cshtml
+++ b/Cinestvar/Views/Film/Details.cshtml
@@ -16,28 +16,28 @@
             </td>
             <td>
                      <dl class = "row">
-                            <dt class = "col-sm-10">
+                            <dt class = "col-sm-10" style="font-size: 18px">
                                 @Html.DisplayNameFor(model => model.Film.Trajanje)
                             </dt>
-                            <dd class = "col-sm-10">
+                            <dd class = "col-sm-10" style="font-size: 18px">
                                  @Html.DisplayFor(modelItem => modelItem.First(t => t.IdFilma!=null).Film.Trajanje)
                             </dd>
-                            <dt class = "col-sm-10">
+                            <dt class = "col-sm-10" style="font-size: 18px">
                                 @Html.DisplayNameFor(model => model.Film.Zanr)
                             </dt>
-                            <dd class = "col-sm-10">
+                            <dd class = "col-sm-10" style="font-size: 18px">
                                 @Html.DisplayFor(modelItem => modelItem.First(t => t.IdFilma!=null).Film.Zanr)
                             </dd>
-                            <dt class = "col-sm-10">
+                            <dt class = "col-sm-10" style="font-size: 18px">
                                 @Html.DisplayNameFor(model => model.Film.Opis)
                             </dt>
-                            <dd class = "col-sm-10">
+                            <dd class = "col-sm-10" style="font-size: 18px">
                                @Html.DisplayFor(modelItem => modelItem.First(t => t.IdFilma!=null).Film.Opis)
                             </dd>
-                            <dt class = "col-sm-10">
+                            <dt class = "col-sm-10" style="font-size: 18px">
                                 @Html.DisplayNameFor(model => model.Film.CijenaKarte)
                             </dt>
-                            <dd class = "col-sm-10">
+                            <dd class = "col-sm-10" style="font-size: 18px">
                                 @Html.DisplayFor(modelItem => modelItem.First(t => t.IdFilma!=null).Film.CijenaKarte)
                             </dd>
              </dl>
