--- a/Cinestvar/Views/Film/Index.cshtml
+++ b/Cinestvar/Views/Film/Index.cshtml
@@ -42,7 +42,7 @@
 
         <tr>
              <td>
-                <img src="@Html.DisplayFor(modelItem => item.PosterLink)" alt="No picture avaliable"/>
+                <img src="@Html.DisplayFor(modelItem => item.PosterLink)" width="65%" height="65%" align= "right" alt="No picture avaliable"/>
             </td>
             <td>
                 <h2><a asp-action="Details" style ="color: black" asp-route-id="@item.IdFilma">@Html.DisplayFor(modelItem => item.NazivFilma)</a> </h2>
