--- a/Cinestvar/Views/Shared/_Layout.cshtml
+++ b/Cinestvar/Views/Shared/_Layout.cshtml
@@ -22,13 +22,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Film" asp-action="Index">Filmovi</a>
                         </li>
                            <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Stavka" asp-action="Index">Stavke</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Stavka" asp-action="Index">Ostala ponuda</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Termin" asp-action="Termini">Termini</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -44,7 +44,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - Cinestvar - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - Cinestvar
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
