--- a/Cinestvar/Views/Shared/_Layout.cshtml
+++ b/Cinestvar/Views/Shared/_Layout.cshtml
@@ -27,9 +27,13 @@
                            <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Stavka" asp-action="Index">Ostala ponuda</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Termin" asp-action="Termini">Termini</a>
-                        </li>
+                        @if (User.IsInRole("Radnik"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Termin" asp-action="Index">Termini</a>
+                            </li>
+                        }
+                        
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
