--- a/Cinestvar/Views/Shared/_Layout.cshtml
+++ b/Cinestvar/Views/Shared/_Layout.cshtml
@@ -25,7 +25,11 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Film" asp-action="Index">Filmovi</a>
                         </li>
                            <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Stavka" asp-action="Index">Ostala ponuda</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Stavka" asp-action="Index">Hrana i piće</a>
+                        </li>
+                        </li>
+                           <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Stavka" asp-action="SpecijalnePonude">Posebne pogodnosti</a>
                         </li>
                         @if (User.IsInRole("Radnik"))
                         {
