Proradilo dodan prikaz razlicitih termina i registracija rezervacija u bazu

--- a/Cinestvar/Views/Film/Details.cshtml
+++ b/Cinestvar/Views/Film/Details.cshtml
@@ -69,7 +69,17 @@
                      Sala 
                      @Html.DisplayFor(modelItem => item.IdSale)
                         <br>
-                     <a asp-area="" asp-controller="Rezervacija" asp-action="Landing" style ="color: black" asp-route-id="@item.IdTermina">@Html.DisplayFor(modelItem => item.PocetakTermina) </a>
+                     @if (User.IsInRole("Fizicko lice"))
+                        {
+                            <a asp-area="" asp-controller="Rezervacija" asp-action="BrojKarata" style ="color: black" asp-route-id="@item.IdTermina">@Html.DisplayFor(modelItem => item.PocetakTermina) </a>
+                        }
+                        else if (User.IsInRole("Pravno lice"))
+                        {
+                            <a asp-area="" asp-controller="Rezervacija" asp-action="Create" style ="color: black" asp-route-id="@item.IdTermina">@Html.DisplayFor(modelItem => item.PocetakTermina) </a>
+                        }
+                        else {
+                            @Html.DisplayFor(modelItem => item.PocetakTermina)
+                        }
                 </center>
                
             </td>
