--- a/Cinestvar/Views/Rezervacija/BrojKarata.cshtml
+++ b/Cinestvar/Views/Rezervacija/BrojKarata.cshtml
@@ -1,21 +1,31 @@
-﻿@model Cinestvar.Models.Rezervacija
+﻿@model Cinestvar.Models.Termin
 
 @{
-    ViewData["Title"] = "BrojKarata";
+    ViewData["Title"] = "Create";
 }
 
-<h1>BrojKarata</h1>
+<h1>Potvrda rezervacije</h1>
 
-<h4>Rezervacija</h4>
+<h4>Vaša rezervacija je skoro gotova!</h4>
 <hr />
-<h5>Unesite željeni broj karata:</h5>
 <div class="row">
-    @Html.TextBoxFor(model => model.IdRezervacije)
-     <form asp-controller="RezervacijaController" asp-action="Create" asp-route-id="@Model.IdRezervacije" method="post">
-    
-    <button type="submit">Potvrdi</button>
-</form>
-
+    <div class="col-md-4">
+        <form asp-action="Create">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <p>Naziv filma: @Html.DisplayFor(model=>model.Film.NazivFilma)</p>
+                <p>Termin: @Html.DisplayFor(model=>model.PocetakTermina)</p>
+                <p>Sala: @Html.DisplayFor(model=>model.IdSale)</p>
+            </div>
+            <div class="form-group">
+                
+            </div>
+            <div class="form-group">
+                <a asp-action="PotvrdiFizicko" asp-route-id=@Model.IdTermina  class="btn btn-primary">Potvrdi</a> 
+                 <a asp-controller="Film" asp-action="Index" class="btn btn-secondary">Odustani</a>
+            </div>
+        </form>
+    </div>
 </div>
 
 <div>
