--- a/Cinestvar/Views/Rezervacija/Create.cshtml
+++ b/Cinestvar/Views/Rezervacija/Create.cshtml
@@ -1,28 +1,28 @@
-﻿@model Cinestvar.Models.Rezervacija
+﻿@model Cinestvar.Models.Termin
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Potvrda rezervacije</h1>
 
-<h4>Rezervacija</h4>
+<h4>Vaša rezervacija je skoro gotova!</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="IdTermina" class="control-label"></label>
-                <select asp-for="IdTermina" class ="form-control" asp-items="ViewBag.IdTermina"></select>
+                <p>Naziv filma: @Html.DisplayFor(model=>model.Film.NazivFilma)</p>
+                <p>Termin: @Html.DisplayFor(model=>model.PocetakTermina)</p>
+                <p>Sala: @Html.DisplayFor(model=>model.IdSale)</p>
             </div>
             <div class="form-group">
-                <label asp-for="IdKorisnika" class="control-label"></label>
-                <input asp-for="IdKorisnika" class="form-control" />
-                <span asp-validation-for="IdKorisnika" class="text-danger"></span>
+                
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <a asp-action="PotvrdiPravno" asp-route-id=@Model.IdTermina  class="btn btn-primary">Potvrdi</a> 
+                 <a asp-controller="Film" asp-action="Index" class="btn btn-secondary">Odustani</a>
             </div>
         </form>
     </div>
