--- a/Cinestvar/Views/Termin/Index.cshtml
+++ b/Cinestvar/Views/Termin/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Termini</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" style="color:azure">Create New</a>
 </p>
 <table class="table">
     <thead>
