--- a/Cinestvar/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Cinestvar/Areas/Identity/Pages/Account/Register.cshtml
@@ -17,16 +17,19 @@
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="Input.Password"></label>
                 <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="Input.ConfirmPassword"></label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <div class="checkbox">
                     <label asp-for="PravnoLice">
@@ -35,8 +38,9 @@
                     </label>
                 </div>
             </div>
+            <br />
             <div class="form-group">
-                <button type="submit" class="btn btn-primary">Register</button>
+                <button type="submit" class="btn btn-warning">Register</button>
             </div>
         </form>
     </div>
