Master commit, dodani filmovi i boja linka imena filmova.

--- a/Cinestvar/Views/Film/Index.cshtml
+++ b/Cinestvar/Views/Film/Index.cshtml
@@ -43,10 +43,10 @@
 
         <tr>
              <td>
-                <img src="@Html.DisplayFor(modelItem => item.PosterLink)" width="65%" height="65%" align= "right" alt="No picture avaliable"/>
+                <img src="@Html.DisplayFor(modelItem => item.PosterLink)" width="200" height="300" align= "right" alt="No picture avaliable"/>
             </td>
             <td>
-                <h2><a asp-action="Details" style ="color: black" asp-route-id="@item.IdFilma">@Html.DisplayFor(modelItem => item.NazivFilma)</a> </h2>
+                <h2><a asp-action="Details" style ="color: azure" asp-route-id="@item.IdFilma">@Html.DisplayFor(modelItem => item.NazivFilma)</a> </h2>
             
                      <dl class = "row">
                             <dt class = "col-sm-10">
