--- a/Cinestvar/Views/Film/NemaTermina.cshtml
+++ b/Cinestvar/Views/Film/NemaTermina.cshtml
@@ -40,6 +40,12 @@
                             <dd class = "col-sm-10">
                                 @Html.DisplayFor(model => model.CijenaKarte)
                             </dd>
+                            <dt class = "col-sm-10" style="font-size: 18px">
+                                @Html.DisplayName("Ocjene")
+                            </dt>
+                            <dd class = "col-sm-10" style="font-size: 18px">
+                                @ViewBag.Rez;
+                            </dd>
              </dl>
             </td>
         </tr>
@@ -68,12 +74,6 @@
 </div>
 <br />
 <br />
-    <div>
-        <iframe style="width: 100%" height="400"
-
-    src="@Html.DisplayFor(model => model.RecenzijaLink)?autoplay=0&mute=0">
-    </iframe>
-    </div>
 
 
 <div>
