--- a/Cinestvar/Views/Termin/Create.cshtml
+++ b/Cinestvar/Views/Termin/Create.cshtml
@@ -16,29 +16,29 @@
                 <label asp-for="PocetakTermina" class="control-label"></label>
                 <input asp-for="PocetakTermina" class="form-control" />
                 <span asp-validation-for="PocetakTermina" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="KrajTermina" class="control-label"></label>
                 <input asp-for="KrajTermina" class="form-control" />
                 <span asp-validation-for="KrajTermina" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="IdFilma" class="control-label"></label>
                 <select asp-for="IdFilma" class ="form-control" asp-items="ViewBag.IdFilma"></select>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="IdSale" class="control-label"></label>
                 <select asp-for="IdSale" class ="form-control" asp-items="ViewBag.IdSale"></select>
-            </div>
+            </div><br />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-warning" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+<div<br /><br />
+    <a asp-action="Index" style="color:azure">Back to List</a>
 </div>
 
 @section Scripts {
