--- a/Cinestvar/Views/Stavka/Edit.cshtml
+++ b/Cinestvar/Views/Stavka/Edit.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="TipStavke" class="control-label"></label>
-                <select asp-for="TipStavke" class="form-control"></select>
+                <select asp-for="TipStavke" class="form-control" asp-items="Html.GetEnumSelectList<TipStavke>()"></select>
                 <span asp-validation-for="TipStavke" class="text-danger"></span>
             </div>
             <div class="form-group">
